--- a/templates/styles.css
+++ b/templates/styles.css
@@ -84,6 +84,14 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
+  max-height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .fireplace-content__main {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
 
 .fireplace-button__prev, .fireplace-button__next {
@@ -97,21 +105,19 @@
   transition: opacity 200ms ease-in-out;
 }
 
-@media screen and (max-width: 768px) {
-  .fireplace-button__prev, .fireplace-button__next {
-    position: absolute;
-    top: 4rem;
-    bottom: 4rem;
-    z-index: 3;
-  }
+.fireplace-button__prev, .fireplace-button__next {
+  position: absolute;
+  top: 4rem;
+  bottom: 4rem;
+  z-index: 3;
+}
 
-  .fireplace-button__prev {
-    left: 0;
-  }
+.fireplace-button__prev {
+  left: 0;
+}
 
-  .fireplace-button__next {
-    right: 0;
-  }
+.fireplace-button__next {
+  right: 0;
 }
 
 .fireplace-button__prev[disabled], .fireplace-button__next[disabled] {
