--- a/templates/fireplace.html
+++ b/templates/fireplace.html
@@ -11,9 +11,11 @@
         <div class="fireplace-count">
           <span class="fireplace-count__value">{{imageCountLabel}}</span>
         </div>
-        <button type="button" aria-label="Fullscreen" class="fireplace-fullscreen fireplace-button">
-          {{> Template.dynamic template=(fullscreenTmpl enterFullscreenTemplate exitFullscreenTemplate) data='' }}
-        </button>
+        {{#if isFullscreenAvailable}}
+          <button type="button" aria-label="Fullscreen" class="fireplace-fullscreen fireplace-button">
+            {{> Template.dynamic template=(fullscreenTmpl enterFullscreenTemplate exitFullscreenTemplate) data='' }}
+          </button>
+        {{/if}}
         <button type="button" aria-label="Close" class="fireplace-close fireplace-button">
           {{> Template.dynamic template=(closeTmpl closeIconTemplate) data='' }}
         </button>
