--- a/templates/components/spinner/spinner.html
+++ b/templates/components/spinner/spinner.html
@@ -1,3 +1,7 @@
 <template name="FireplaceSpinner">
-  <div class="FireplaceSpinner"></div>
+  <div class="FireplaceSpinner">
+    <svg viewBox="0 0 50 50">
+      <circle cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+    </svg>
+  </div>
 </template>
