--- a/templates/styles.css
+++ b/templates/styles.css
@@ -68,6 +68,7 @@
 
 .fireplace-count {
   min-width: 48px;
+  margin-right: auto;
 }
 
 .fireplace-count__value {
@@ -228,6 +229,10 @@
   user-select: none;
 }
 
+.fireplace-button + .fireplace-button {
+  margin-left: 8px;
+}
+
 .fireplace-button svg {
   display: inline-block;
   position: relative;
@@ -238,7 +243,8 @@
   background-color: rgba(255,255,255,0.5);
   width: 36px;
   height: 36px;
-  padding: 6px;
+  padding: 8px;
+  overflow: visible;
 }
 
 .fireplace-button:focus {
