Fix image sizing and position issues

--- a/templates/fireplace.html
+++ b/templates/fireplace.html
@@ -24,7 +24,7 @@
         </button>
       </div>
       <figure class="fireplace-content__main">
-        <div class="fireplace-content__middle {{imageContainerClass layoutMode}}" style={{imageContainerStyles maxImageWidth}}>
+        <div class="fireplace-content__middle {{imageContainerClass layoutMode}}" style={{imageContainerStyles maxImageWidth layoutMode}}>
             <img
               class="fireplace-image"
               src={{currentImage.src}}
